--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">灵娣下载器</string>
+    <string name="app_name">MusicDownloader</string>
     <string name="declare">仅供学习，严禁商业使用\n开发者：Jason</string>
 </resources>
